# aimon

./: .dockerignore  .env_sample  .envrc.template  .gitignore  .pre-commit-config.yaml  .testmondata  Dockerfile  README.md  app.py  env_sample  justfile  mock_ai_server.py  plan.md  pyproject.toml  report.md  specification.md
.cursor/: rules.mdc
.cursor/rules/: derived-cursor-rules.mdc  development.mdc  hof_docstrings.mdc  public_docstrings.mdc  pyproject-protection.mdc
.data/: ai_tools.json  projects.json
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  development_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: config.py  data_manager.py  errors.py  logger.py  main_page.py  page_logic.py  worker.py
app/application/: __init__.py  container.py  data_manager.py  project_processor.py
app/application/handlers/: __init__.py  ai_tool_handler.py  project_handler.py
app/application/services/: ai_tool_service.py  project_service.py
app/domain/: __init__.py  ai_tool_executor.py  entities.py  repositories.py
app/infrastructure/: __init__.py  factories.py  file_processor.py  new_worker.py
app/infrastructure/ai_executors/: __init__.py  ai_executor_factory.py  azure_functions_executor.py
app/infrastructure/persistence/: __init__.py  json_repositories.py
app/model/: __init__.py  entities.py  store.py
app/models/: __init__.py  ai_tool.py  project.py
app/repositories/: __init__.py  ai_tool_repository.py  project_repository.py
app/service/: __init__.py  ai_tool.py  execution.py  project.py
app/services/: __init__.py  ai_tool_service.py  project_service.py
app/types/: __init__.py  enums.py  models.py
app/ui/: __init__.py  ai_tool_management.py  button_handlers.py  main_page.py  project_creation_form.py  project_detail_modal.py  project_list.py  rag_chat_page.py
app/utils/: __init__.py  async_helper.py  base_index_builder.py  embeddings_factory.py  excel_parser.py  file_processor.py  file_system.py  keyword_index.py  llm_client.py  prompt_manager.py  semantic_index.py  tokenizer.py
app/utils/executors/: __init__.py  ai_executor_factory.py  azure_functions_executor.py  command_executor.py
app/view/: ai_tool_management.py  project_creation_form.py  project_detail_modal.py  project_list.py
pages/: 1_AI_Tool_Management.py  20_RAG_Chat.py
test_data/: closing_meeting.md  overview.txt
tests/: conftest.py  test_config.py  test_data_manager.py  test_errors.py  test_logger.py  test_page_logic.py  test_worker.py
tests-ci/: test_worker_integration.py
tests-e2e/: README.md  conftest.py  test_main_page.py  test_project_workflow.py
tests/application/: __init__.py  test_ai_tool_service.py  test_container.py  test_data_manager.py  test_handlers.py  test_project_handler.py  test_project_processor.py  test_project_service.py
tests/ci/: test_new_worker_ci.py  test_worker_integration.py
tests/domain/: __init__.py  test_entities.py
tests/fixtures/: gemini_results.md  meeting_notes.xlsx  prompt.json
tests/infrastructure/: __init__.py  test_ai_client.py  test_azure_functions_executor.py  test_factories.py  test_file_processor.py  test_new_worker.py  test_repositories.py
tests/model/: test_entities.py  test_store.py
tests/models/: __init__.py  test_ai_tool.py  test_project.py
tests/repositories/: __init__.py  test_ai_tool_repository.py  test_project_repository.py
tests/services/: __init__.py  test_ai_tool_service.py  test_project_service.py  test_project_service_integration.py
tests/test_service/: test_ai_tool.py  test_execution.py  test_project.py
tests/ui/: __init__.py  test_ai_tool_management.py  test_main_page.py  test_project_creation_form.py  test_project_detail_modal.py  test_project_list.py  test_rag_chat_page.py
tests/utils/: __init__.py  test_azure_functions_executor.py  test_command_executor.py  test_excel_parser.py  test_executors_init.py  test_keyword_index.py  test_llm_client.py  test_prompt_manager.py
tests/view/: __init__.py  test_main_page.py  test_project_creation_form.py  test_project_detail_modal.py  test_project_list.py
tests_e2e/: README.md  config.py  conftest.py  test_ai_tool_management.py  test_main_page.py  test_project_workflow.py
tmp_test_data/: document2.txt  english_document.txt  gemini_results.md
