[project]
name = "aiman"
version = "0.1.0"
requires-python = ">=3.12"


dependencies = [
    "streamlit>=1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pandas>=2.0",
    "openpyxl>=3.0",
    "streamlit-autorefresh>=1.0",
    "google-generativeai>=0.5.0",
    "streamlit-modal==0.1.2",
    "Pillow>=10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "types-openpyxl>=3.1.5.20250602",
    "types-Pillow>=10.2.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.0",
    "pytest-testmon>=2.1.3",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
pythonpath = [
    "app"
]
markers = [
    "ci: marks tests as ci tests",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py"
]
# addopts = "--browser chromium --browser firefox --browser webkit"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W", # pycodestyle, pyflakes
    "ANN", # flake8-annotations
    "I",   # isort
    "UP",  # pyupgrade
    "PT",  # flake8-pytest-style
    "C90", # flake8-comprehensions
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "streamlit_autorefresh.*",
    "streamlit_modal.*",
]
ignore_missing_imports = true
