[project]
name = "aiman"
version = "0.1.0"
requires-python = ">=3.12"


dependencies = [
    "streamlit>=1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pandas>=2.0",
    "openpyxl>=3.0",
    "streamlit-autorefresh>=1.0",
    "google-generativeai>=0.5.0",
    "streamlit-modal==0.1.2",
    "Pillow>=10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "types-openpyxl>=3.1.5.20250602",
    "types-Pillow>=10.2.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.0",
    "pytest-testmon>=2.1.3",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
pythonpath = [
    "app"
]
markers = [
    "ci: marks tests as ci tests",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py"
]
# addopts = "--browser chromium --browser firefox --browser webkit"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W", # pycodestyle, pyflakes
    "ANN", # flake8-annotations
    "I",   # isort
    "UP",  # pyupgrade
    "PT",  # flake8-pytest-style
    "C90", # flake8-comprehensions
    "TID", # flake8-tidy-imports
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.mypy]
python_version = "3.12"
strict = true
no_implicit_optional = true     # 暗黙的な Optional を禁止
show_error_codes = true         # エラーコードを表示（精密な制御のため）
pretty = true                   # 色付きで見やすいエラー表示
enable_error_code = "truthy-bool" # 暗黙的な真偽値判定を検出（バグ予防）
disallow_any_unimported = false # 外部ライブラリの Any は許容
disallow_any_expr = false       # 外部ライブラリからの Any 式は許容
disallow_any_decorated = false  # デコレータからの Any は許容
warn_unreachable = false        # 到達不能コードの警告は無効（誤検知対策）
disallow_untyped_calls = false  # 外部ライブラリ呼び出し許容

# テストはゆるめの設定
[[tool.mypy.overrides]]
module = ["tests.*", "tests_e2e.*"]
disallow_untyped_defs = false
disallow_any_explicit = false   # テストでは Any 許容
disallow_any_generics = false   # テストではジェネリック Any 許容
warn_return_any = false         # テストでは Any 戻り値も許容

# サードパーティライブラリの型チェックを無視
[[tool.mypy.overrides]]
module = [
    "streamlit_modal.*",
]
ignore_missing_imports = true
